--- a/Home.html
+++ b/Home.html
@@ -40,6 +40,14 @@
         padding: 10px;
         margin: 30px 0;
     }
+    img {
+            display: block; 
+            margin: 0 auto;
+            border-radius: 50%; 
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+            max-width: 100px;
+            height: auto; 
+        }
 
     p {
         margin: 20px 0;
@@ -77,7 +85,7 @@
         </nav>
     </header>
     <h1>1. What Is JavaScript?</h1>
-    
+    <img src="https://static.javatpoint.com/images/javascript/javascript_logo.png" alt="JavaScript" width="32" height="32">
     <p>
         JavaScript is a high-level, often just-in-time compiled language that
         conforms to the ECMAScript standard. It has dynamic typing,
@@ -87,6 +95,8 @@
     </p>
     <br />
     <h1>2.What Is React.js </h1>
+    <img src="https://static.javatpoint.com/tutorial/reactjs/images/reactjs-tutorial.png" alt="React.js" width="32" height="32">
+    <p>
     <p>ReactJS is JavaScript library used for building reusable UI components. According to React official
         documentation, following is the definition −
 
@@ -97,6 +107,7 @@
         which reduces the boilerplate and is easier to reason about than traditional data binding.</p>
     <br />
     <h1>3. What Is Ruby on Rails ?</h1>
+    <img src="https://static.javatpoint.com/ruby/images/ruby-tutorial.png" alt="Ruby" width="32" height="32">
     <p>Ruby on Rails or also known as rails is a server-side web application development framework that is written in
         the Ruby programming language, and it is developed by David Heinemeier Hansson under the MIT License. It
         supports MVC(model-view-controller) architecture that provides a default structure for database, web pages, and
@@ -111,6 +122,7 @@
     </p>
 
     <h1>4.What Is Node.Js?</h1>
+    <img src="https://www.javatpoint.com/js/nodejs/images/node-js-tutorial.png" alt="Node.js" width="32" height="32">
     <p>Node.js (Node) is an open source, cross-platform runtime environment for executing JavaScript code. Node is used
         extensively for server-side programming, making it possible for developers to use JavaScript for client-side and
         server-side code without needing to learn an additional language. Node is sometimes referred to as a programming
