--- a/Task9.html
+++ b/Task9.html
@@ -84,10 +84,10 @@ img{
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    document.addEventListener("click",function (event){
-      if(event.target.classList.contains("gallery-item")){
+    document.addEventListener("click",function (e){
+      if(e.target.classList.contains("gallery-item")){
           const src = e.target.getAttribute("src");
-          document.querySelector(".-modalimg").src = src;
+          document.querySelector(".modal-img").src = src;
           const myModal = new bootstrap.Modal(document.getElementById('gallery-popup'));
           myModal.show();
       }
